--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dist"
   ],
   "dependencies": {
+    "@kintone/rest-api-client": "^1.5.2",
     "axios": "^0.18.1",
     "chalk": "^2.4.2",
     "commander": "^2.19.0",
